--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -32,7 +32,7 @@
           </div>
         </div>
       </section>
-      <section class="colored-section bg-info hero-section1">
+      <section class="colored-section hero-section1">
         <div>
           <div style="padding:30px;">
             <div nz-row [nzGutter]="8">
