--- a/src/app/index/index.component.less
+++ b/src/app/index/index.component.less
@@ -1395,7 +1395,7 @@ h6,
 }
 
 section {
-  padding: 80px 0px;
+  padding: 10px 0px 0px 0px;
 }
 
 @media (max-width: 768px) {
@@ -1518,6 +1518,74 @@ section {
 .navbar-top{
     padding: 5px 10px 0px 20px;
 }
-.hero-section1{
-background-image: url('../../assets/img/bg2.svg');
+.users-section {
+background-color: #FFFFFF;
 }
+.study-section{
+background-color: rgb(250, 250, 250);
+}
+.ant-menu.ant-menu-dark .ant-menu-item-selected{
+  background-color: transparent !important;
+  padding: 10px 0px 10px 0px !important;
+}
+
+.study-autoplay {
+  height: 100vh;
+  min-height: 300px;
+  background-size: cover;
+  background-position: center center;
+  background-image: url(../../assets/img/bg2.jpg);
+}
+.study-head h1{
+  text-align:center;
+  font-size: 50pt;
+  color: #0d0d0e;
+  font-family: "Catamaran","Times New Roman",
+  Georgia,
+  Serif;
+}
+.study-head h2 {
+  text-align: center;
+  font-size: 20pt;
+  color: #353538;
+  font-family: "Catamaran", "Times New Roman",
+    Georgia,
+    Serif;
+}
+@media screen and (min-width:500px) {
+  .team {
+    padding: 5px;
+    background-image: url('../../assets/img/bg2.svg');
+  }
+}
+@media screen and (max-width:996px) {
+  .team {
+    padding: 2px;
+    background-image: url('../../assets/img/bg2.svg');
+  }
+}
+
+@media screen and (min-width:996px) {
+  .nzcard{
+    width:300px;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .nzcard:hover {
+    transform: scale(1.2);
+    z-index:999;
+  }
+}
+
+[nz-carousel-content] {
+  text-align: center;
+  height: 90vh;
+  color: #fff;
+  overflow: hidden;
+  padding-top: 40vh;
+  font-size: 1.625rem;
+  line-height: 1.6;
+  font-family: "Georgia",serif;
+}
+
