--- a/src/styles.less
+++ b/src/styles.less
@@ -541,3 +541,103 @@
 @list-item-meta-title-margin-bottom: @padding-sm;
 
 /* You can add global styles to this file, and also import other style files */
+.markdown h1 {
+  font-size: 2rem;
+  text-align: center !important;
+}
+
+.markdown h2 {
+  font-size: 1.8rem;
+}
+
+.markdown h3 {
+  font-size: 1.6rem;
+}
+
+.markdown h4 {
+  font-size: 1.4rem;
+}
+
+.markdown h5 {
+  font-size: 1.2rem;
+}
+
+.markdown h6 {
+  font-size: 1rem;
+}
+
+.markdown p {
+  position: relative;
+  margin-bottom: 1rem;
+  font-size: 19px;
+  font-family: Vollkorn,
+  Palatino,
+  Times;
+}
+
+.markdown img {
+  max-width: 80vw;
+}
+
+.markdown table {
+  border-collapse: collapse;
+  border-spacing: 0px;
+  width: 100%;
+  overflow: auto;
+  break-inside: auto;
+  text-align: left;
+  margin: 0.8em 0px;
+}
+
+.markdown table td {
+  min-width: 32px;
+}
+.markdown table {
+  padding: 0px;
+  word-break: initial;
+}
+
+.markdown table tr {
+  border-top: 1px solid rgb(223, 226, 229);
+  margin: 0px;
+  padding: 0px;
+}
+
+.markdown table tr:nth-child(2n),
+.markdown thead {
+  background-color: rgb(248, 248, 248);
+}
+
+.markdown table tr th {
+  font-weight: bold;
+  border-width: 1px 1px 0px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-top-color: rgb(223, 226, 229);
+  border-right-color: rgb(223, 226, 229);
+  border-left-color: rgb(223, 226, 229);
+  border-image: initial;
+  border-bottom-style: initial;
+  border-bottom-color: initial;
+  text-align: left;
+  margin: 0px;
+  padding: 6px 13px;
+}
+
+.markdown table tr td {
+  border: 1px solid rgb(223, 226, 229);
+  text-align: left;
+  margin: 0px;
+  padding: 6px 13px;
+}
+
+.markdown table tr th:first-child,
+.markdown table tr td:first-child {
+  margin-top: 0px;
+}
+
+.markdown table tr th:last-child,
+.markdown table tr td:last-child {
+  margin-bottom: 0px;
+}
