--- a/src/app/index/index.component.less
+++ b/src/app/index/index.component.less
@@ -1366,7 +1366,7 @@ h6,
 }
 
 .brand {
-  margin-top: 20vh;
+  margin-top: 30vh;
   color: #fff;
   text-align: center;
 }
@@ -1526,7 +1526,6 @@ background-color: rgb(250, 250, 250);
 }
 .ant-menu.ant-menu-dark .ant-menu-item-selected{
   background-color: transparent !important;
-  padding: 10px 0px 10px 0px !important;
 }
 
 .study-autoplay {
@@ -1536,6 +1535,10 @@ background-color: rgb(250, 250, 250);
   background-position: center center;
   background-image: url(../../assets/img/bg2.jpg);
 }
+.study-autoplay >a {
+  text-decoration: none
+}
+
 .study-head h1{
   text-align:center;
   font-size: 50pt;
@@ -1552,20 +1555,22 @@ background-color: rgb(250, 250, 250);
     Georgia,
     Serif;
 }
-@media screen and (min-width:500px) {
+
+
+@media screen and (min-width:992px) {
   .team {
-    padding: 5px;
+    padding: 50px 5px;
     background-image: url('../../assets/img/bg2.svg');
   }
 }
-@media screen and (max-width:996px) {
+@media screen and (max-width:992px) {
   .team {
     padding: 2px;
-    background-image: url('../../assets/img/bg2.svg');
+    background-image: url('../../assets/img/bg3.svg');
   }
 }
 
-@media screen and (min-width:996px) {
+@media screen and (min-width:992px) {
   .nzcard{
     width:300px;
     float: none;
@@ -1578,14 +1583,47 @@ background-color: rgb(250, 250, 250);
   }
 }
 
-[nz-carousel-content] {
+.nz-carousel-content {
   text-align: center;
   height: 90vh;
   color: #fff;
   overflow: hidden;
   padding-top: 40vh;
-  font-size: 1.625rem;
   line-height: 1.6;
   font-family: "Georgia",serif;
 }
+.nz-carousel-content:hover{
+  cursor: pointer;
+}
+.nz-carousel-content h3{
+  font-size: 1.625rem;
+}
+.nz-carousel-content h4 {
+  font-size: 1rem;
+}
+.nz-carousel-content button {
+  font-size: 1rem;
+  background-color: transparent;
+  border: 2px solid #fff;
+  margin: 0 15px 20px 0;
+  min-width: 100px;
+  line-height: 26px;
+}
+.nz-carousel-content button:hover {
+  font-size: 1rem;
+  background-color: #fff;
+  border: 2px solid #fff;
+  margin: 0 15px 20px 0;
+  min-width: 100px;
+  line-height: 26px;
+  color: #2e3037;
+  cursor: pointer;
+}
 
+.footer{
+  text-align: center;
+  color: #8890a4;
+}
+.ant-layout-footer{
+  background-color: #2e3037;
+}
